prevent extra space at bottom of run-panel and job-panel

--- a/saltgui/static/stylesheets/page.css
+++ b/saltgui/static/stylesheets/page.css
@@ -36,7 +36,6 @@ pre a:hover {
 
 pre.output div {
   margin-top: 10px;
-  margin-bottom: 10px;
 }
 
 pre.output div:first-of-type {
